[#1] feat: Pagination 구현

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,11 @@
 
 # dependencies
 /node_modules
+
+# vscode
+**/.vscode/
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+*.code-workspace
