--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
         "dev": "concurrently --kill-others-on-fail \"yarn run server\" \"yarn run client\""
     },
     "dependencies": {
+        "bluebird": "^3.7.2",
         "body-parser": "^1.19.0",
         "express": "^4.16.4",
-        "multer": "^1.4.2",
         "mysql": "^2.18.1"
     },
     "devDependencies": {
